import React, { useEffect, useState } from 'react'
import _ from 'lodash'
import { H6, Paragraph, Spacer, Spinner, XStack, YStack } from 'tamagui'
import { H2 } from '../../components/Global/helpers/text'
import Button from '../../components/Global/helpers/button'
import { SafeAreaView } from 'react-native-safe-area-context'
import Input from '../../components/Global/helpers/input'
import Icon from '../../components/Global/components/icon'
import { NativeStackNavigationProp } from '@react-navigation/native-stack'
import Toast from 'react-native-toast-message'
import { IS_MAESTRO_BUILD } from '../../configs/config'
import LoginStackParamList from './types'
import useAuthenticateUserByName from '../../api/mutations/authentication'
import QuickConnect from '../../components/Login/components/quick-connect'
import { useJellifyServer } from '../../stores/auth'
import { useNavigation } from '@react-navigation/native'

export default function ServerAuthentication(): React.JSX.Element {
	const navigation = useNavigation<NativeStackNavigationProp<LoginStackParamList>>()

	const [username, setUsername] = useState<string | undefined>(undefined)
	const [password, setPassword] = useState<string | undefined>(undefined)

	const [server] = useJellifyServer()

	const { mutate: authenticateUserByName, isPending } = useAuthenticateUserByName({
		onSuccess: () => {
			navigation.navigate('LibrarySelection')
		},
		onError: (error: Error) => {
			Toast.show({
				text1: `Unable to sign in to ${server!.name}`,
				text2: error.message,
				type: 'error',
			})
		},
	})

	return (
		<SafeAreaView style={{ flex: 1 }} testID='server_authentication_screen'>
			<YStack maxHeight={'$19'} flex={1} justifyContent='center'>
				<H2 marginHorizontal={'$2'} textAlign='center' testID='server_authentication_title'>
					{`Sign in to ${server?.name ?? 'Jellyfin'}`}
				</H2>
				<H6 marginHorizontal={'$2'} textAlign='center'>
					{server?.version ?? 'Unknown Jellyfin version'}
				</H6>
			</YStack>
			<YStack marginHorizontal={'$4'}>
				<Input
					prependElement={<Icon name='human-greeting-variant' color={'$primary'} />}
					placeholder='Username'
					value={username}
					style={
						IS_MAESTRO_BUILD ? { backgroundColor: '#000', color: '#000' } : undefined
					}
					testID='username_input'
					secureTextEntry={IS_MAESTRO_BUILD} // If Maestro build, don't show the username as screen Records
					onChangeText={(value: string | undefined) => setUsername(value)}
					autoCapitalize='none'
					autoCorrect={false}
					autoComplete='username'
					textContentType='username'
					importantForAutofill='yes'
					returnKeyType='next'
					autoFocus
					clearButtonMode='while-editing'
				/>

				<Spacer />

				<Input
					prependElement={<Icon name='lock-outline' color={'$primary'} />}
					placeholder='Password'
					value={password}
					testID='password_input'
					style={
						IS_MAESTRO_BUILD ? { backgroundColor: '#000', color: '#000' } : undefined
					}
					secureTextEntry
					clearButtonMode='while-editing'
				/>

				<Spacer />

				<Button
					borderWidth={'$1'}
					borderColor={'$primary'}
					disabled={_.isEmpty(username) || isPending}
					icon={() =>
						isPending ? (
							<Spinner color='$primary' />
						) : (
							<Icon name='chevron-right' small color='$primary' />
						)
					}
					testID='sign_in_button'
					onPress={() => {
						if (!_.isUndefined(username)) {
							console.log(`Signing in...`)
							authenticateUserByName({ username, password })
						}
					}}
				>
					<Paragraph fontWeight={'$6'} color={'$primary'}>
						Sign in
					</Paragraph>
				</Button>

				<Spacer />

				<YStack flex={1} marginVertical={'$4'}>
					<QuickConnect />
				</YStack>

				<Spacer />

				<XStack justifyContent='space-between' alignItems='center'>
					<Button
						borderWidth={'$1'}
						borderColor={'$borderColor'}
						marginVertical={0}
						icon={() => <Icon name='chevron-left' small />}
						borderRadius={'$4'}
						onPress={() => {
							navigation.popTo('ServerAddress', undefined)
						}}
					>
						<Paragraph fontWeight={'$6'} color={'$borderColor'}>
							Switch Server
						</Paragraph>
					</Button>
					{isPending ? (
						<Spinner />
					) : (
						<Button
							marginVertical={0}
							borderColor={'$primary'}
							disabled={_.isEmpty(username) || isPending}
							icon={() => <Icon name='chevron-right' small color='$primary' />}
							testID='sign_in_button'
							onPress={() => {
								if (!_.isUndefined(username)) {
									authenticateUserByName({ username, password })
								}
							}}
						>
							<Paragraph fontWeight={'$6'} color={'$primary'}>
								Sign in
							</Paragraph>
						</Button>
					)}
				</XStack>
				{/* <Toast /> */}
			</YStack>
		</SafeAreaView>
	)
}
