...
	return (
		<YStack
			flex={1}
			justifyContent='center'
			paddingHorizontal={'$4'}
			marginBottom={isOnboarding ? '$20' : '$4'}
			testID='library_selection_screen'
		>
			<Animated.View
				entering={FadeInUp.easing(Easing.in(Easing.ease))}
				exiting={FadeOutUp.easing(Easing.out(Easing.ease))}
				style={{
					flex: 1,
...
				<Button
					variant='outlined'
					borderColor={'$primary'}
					opacity={!selectedLibraryId ? 0.5 : 1}
					icon={() => <Icon name={primaryButtonIcon} small color='$primary' />}
					onPress={handleLibrarySelection}
					testID='let_s_go_button'
					flex={1}
				>
					<Paragraph color={'$primary'} fontWeight={'600'}>
						{primaryButtonText}
					</Paragraph>
				</Button>
...
