...
			ListHeaderComponent={
				<YStack paddingTop={'$2'}>
					<Input
						placeholder={placeholder}
						onChangeText={handleSearchStringUpdate}
						value={inputValue}
						testID='search-input'
						accessibilityLabel='Search your library'
						accessibilityHint='Type to search artists, albums, playlists, and songs'
						clearButtonMode='always'
					/>

					{!isEmpty(artistResults) && (
...
