...
		 * See the matching comment in Player/components/header.tsx.
		 */
		<GestureDetector gesture={gesture}>
			<View collapsable={false}>
				<Animated.View
					collapsable={false}
					testID='miniplayer-test-id'
					entering={SlideInDown.springify()}
				>
					<YStack
						onPress={openPlayer}
						backgroundColor={theme.background.val}
						{...ICON_PRESS_STYLES}
...
